--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/blogs?createTableIfNotExists=true
 spring.datasource.username=root
-spring.datasource.password=670705
+spring.datasource.password=Kan@2911
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework=debug
+
 
 
 
